# delta-txn-service

./: Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: docker-publish.yml
deploy/: docker-compose.yaml
deploy/helm/delta-txn-service/: Chart.yaml  values.yaml
deploy/helm/delta-txn-service/templates/: _helpers.tpl  deployment.yaml  service.yaml
proto/: delta_txn.proto 
src/: lib.rs  main.rs
src/config/: grpc.rs  storage.rs
src/delta/: commit.rs  errors.rs  mod.rs  table.rs
src/grpc/: mapping.rs  mod.rs  server.rs
src/locking/: mod.rs  table_lock.rs
src/telemetry/: grpc_metrics.rs  mod.rs  tracing.rs
