[package]
name = "delta-txn-service"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
# -----------------------------
# Async runtime
# -----------------------------
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

# -----------------------------
# gRPC / Protobuf
# -----------------------------
tonic = "0.14.3"
tonic-prost = "0.14.3"
prost = "0.14.3"
prost-types = "0.14.3"
tower = "0.5.3"
http-body = "1.0.1"

# -----------------------------
# Delta Lake (native)
# -----------------------------
deltalake = { version = "0.30.1", features = ["s3", "datafusion"] }

# -----------------------------
# Concurrency / locking
# -----------------------------
dashmap = "6.1.0"

# -----------------------------
# Serialization / utilities
# -----------------------------
thiserror = "2.0.18"
serde_json = "1.0.149"

# -----------------------------
# Observability
# -----------------------------
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-opentelemetry = "0.32.1"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic", "tls"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }

[build-dependencies]
tonic-prost-build = "0.14.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
